<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.kangsik.crunchtime.MainActivity"
    android:id="@+id/background">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ExerciseText"
            android:id="@+id/textView"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#FFFFFF"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:textColor="#FFFFFF"/>

    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout3"
        android:layout_below="@+id/gridLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/userInput"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#FFFFFF"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AmountText"
            android:id="@+id/textView3"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/unitsText"
            android:id="@+id/unitText"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="#FFFFFF"/>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertBtnText"
        android:id="@+id/convertBtn"
        android:layout_row="1"
        android:layout_column="0"
        android:textColor="#FFFFFF"
        android:shadowColor="#FF7E47"
        android:width="120dp"
        android:height="60dp"
        android:layout_below="@+id/gridLayout3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Equivalent to"
        android:id="@+id/textView8"
        android:layout_row="0"
        android:layout_column="3"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/convertBtn"
        android:layout_marginStart="25dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8">

        <ListView
            android:id="@+id/exerciseListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="#FFFFFF">
        </ListView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numCalText"
        android:id="@+id/outputText"
        android:layout_row="1"
        android:layout_column="0"

        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_alignTop="@+id/unitText2"
        android:layout_alignEnd="@+id/textView6"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/unitCal"
        android:id="@+id/unitText2"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginTop="59dp"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_toEndOf="@+id/outputText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Calories"
        android:id="@+id/textView6"
        android:layout_column="0"
        android:layout_gravity="bottom|fill_vertical"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_above="@+id/unitText2"
        android:textColor="#FFFFFF"/>

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calories "
        android:checked="false"
        android:layout_weight="0.14"
        android:minWidth="100dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_alignTop="@+id/gridLayout3"
        android:layout_toEndOf="@+id/convertBtn"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/quoteText"
        android:width="50dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/outputText"
        android:layout_alignEnd="@+id/unitText2" />

</RelativeLayout>
